# finetuning-gemma-1b-aims-gcp-tutorial

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
data/eval/: eval_prompts.jsonl
outputs/2026-02-19/04-23-30/.hydra/: config.yaml  hydra.yaml
outputs/2026-02-19/05-00-39/.hydra/: hydra.yaml
outputs/2026-02-19/05-01-55/.hydra/: hydra.yaml
outputs/2026-02-19/05-12-55/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/exp0/checkpoint-50/: adapter_config.json  trainer_state.json
outputs/exp_default/checkpoint-125/: tokenizer_config.json  trainer_state.json
scripts/: create_vm.sh  download_and_upload_gcs.sh  prepare_eval_split.py  run_evaluate.py  run_inference.py  run_train.py
src/: evaluate.py  inference.py  train.py
src/configs/: base.yaml  lora_rank16.yaml  lora_rank32.yaml
src/utils/: data_utils.py  device_utils.py  logger.py  metrics.py
vertexai/: sample_vertex_job.yaml
wandb/: latest-run
wandb/run-20260219_123213-vr0gpad5/: run-vr0gpad5.wandb
wandb/run-20260219_123213-vr0gpad5/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260219_190449-bf6tgxfg/: run-bf6tgxfg.wandb
wandb/run-20260219_190449-bf6tgxfg/files/: config.yaml  wandb-metadata.json
wandb/run-20260219_190705-gah8gt63/: run-gah8gt63.wandb
wandb/run-20260219_190705-gah8gt63/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20260219_192716-0pp772ls/: run-0pp772ls.wandb
wandb/run-20260219_192716-0pp772ls/files/: config.yaml  wandb-metadata.json  wandb-summary.json
(+19 files in other folders)
